@@ -1,1 +1,2 @@
 *-stamp
+.pc
