@@ -16,4 +16,4 @@ libgutenprint-doc
 libgutenprint2
 libgutenprintui2-1
 libgutenprintui2-dev
-patched
+patches
